# Lucius-V

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: deploy-image.yml
src/: database.rs  main.rs
src/admin_commands/: interval.rs  mod.rs  register.rs  sync.rs
src/commands/: bruh.rs  help.rs  mod.rs  status.rs
src/db/: db.enc  mod.rs
src/events/: message.rs  mod.rs
src/utils/: mod.rs  random.rs
