[package]
name = "lucius-v"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
dotenv = "0.15.0"
rusqlite = "0.29.0"
poise = "0.5.5"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
rand = "0.8.5"
markov = "1.1.0"
regex = "1.9.1"
